[package]
name = "wwml"
version = "0.1.1"
edition = "2021"
description = "Tensor library for AI"
license = "MIT"
repository = "https://github.com/szuwgh/wwml"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rawpointer = { version = "0.2" }
thiserror = "2.0"
half = { version = "2.3.1", features = ["num-traits", "use-intrinsics", "rand_distr"] }
num-traits = "0.2.15"
num_cpus = "1.15.0"
rayon = "1.7.0"
lazy_static = "1.5.0"
cudarc = { version = "0.16", default-features = false, features = ["runtime", "driver", "cuda-12050", "cublas", "f16"],optional = true }
galois-kernels = {path = "./galois-kernels", version = "0.1.0", optional = true}
byteorder = "1.5.0"

[build-dependencies]  
bindgen_cuda = { version = "0.1.1", optional = true }


[features]
default = ["cpu"]
cuda = ["cudarc", "bindgen_cuda", "galois-kernels"]             
cpu = []
